# ncml

./: .gitignore  README.org
gntsat/: .clang-format  .gitignore  CMakeLists.txt  analysis.txt  analysis_250.txt  gnt_results.json  gnt_results_250.json  walksat_result.json  walksat_result_250.json
gntsat/benchmark/aim/: test.cnf
gntsat/include/gntsat/: compute.h  io.h  parser.h  problem.h  solver.h
gntsat/profile/: analyser.py  profile.py
gntsat/profile/benchmark/: uf100-0404.cnf  uf100-0647.cnf  uf100-0720.cnf  uf100-0835.cnf  uf100-0925.cnf  uf150-016.cnf  uf150-025.cnf  uf150-027.cnf  uf150-089.cnf  uf150-093.cnf  uf200-018.cnf  uf200-024.cnf  uf200-051.cnf  uf200-068.cnf  uf200-072.cnf  uf250-054.cnf  uf250-06.cnf  uf250-085.cnf  uf250-09.cnf  uf250-099.cnf  uf250_random_ksat(11).dimacs  uf250_random_ksat(4).dimacs  uf250_random_ksat(5).dimacs  uf250_random_ksat(8).dimacs  uf250_random_ksat(9).dimacs
gntsat/src/: Parser.cc  Parser.cpp  Parser.h  io.cc  main.cc  parser.cc  solver.cc  walksat.cc
gntsat/tests/: CMakeLists.txt  compute_tests.cc  solver_tests.cc
presentation/: .gitignore  analysis.tex  bibliography.bib  gntsat.tex  introduction.tex  presentation.tex  results.tex
presentation/analysis/: gntsat_search.tex  search_space.tex  summary.tex  walksat_search.tex
presentation/results/: experiments.tex  performance_measurements.tex  (+1 more)
proposal/: proposal.tex
report/: .gitignore  Background.tex  Conclusion.tex  Discussion.tex  Experiments.tex  Introduction.tex  Makefile  Methods.tex  bibliography.bib  report.dvi  report.synctex(busy)  report.tex
(+7 files in other folders)
